Wed Nov  8 13:18:51 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* valloc.c: omit malloc declaration (it's already in system.h
	  which is included and conflicts with <stdlib.h> on some
	  systems).

Tue Nov  7 19:38:48 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* system.h (STAT_MACROS_BROKEN): undo previous change, because
	  else all regular files will be identified as links (the mask for
	  links is S_IFREG|S_IFCHR).

Mon Nov  6 19:20:56 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * system.h (STAT_MACROS_BROKEN): in defining the S_IF* macros,
        don't fold to 1 or 0 by first masking with S_IFMT; not all
        systems have that macro, and anyway it's only necessary that we
        return non-zero.

Fri Oct 27 13:43:35 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * save-cwd.c: use __PROTO instead of __P (see below).

        * getline.h (__PROTO): same as below.

        * save-cwd.h (__PROTO): replaces __P.  New name, so don't ask if
        already defined.  The conflict was that OS/2 w/ IBM C/C++ uses
        `__P' for something else, in <ctype.h> of all places.

        * system.h: do nothing about alloca ifdef ALLOCA_IN_STDLIB (see
        ../src/ChangeLog).

Tue Oct 24 13:01:25 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* wait.h: include sys/resource.h if available. This is needed at
	  least under AIX-3.2 where <sys/wait.h> doesn't include it.

Mon Oct 23 17:39:11 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* valloc.c (valloc): change parameter definition

Sun Oct 22 14:15:44 1995  Jim Meyering  (meyering@comco.com)

	* getline.c, getline.h: New files.
	* Makefile.in (SOURCES, OBJECTS, HEADERS): Add getline.c, getline.o,
	and getline.h, respectively.

Tue Oct 10 18:01:50 1995  Karl Fogel  <kfogel@totoro.cyclic.com>

        * Makefile.in (cvs_srcdir): define cvs_srcdir to be ../src, then
        include it with -I so save_cwd.c can find error.h (for example).

Sun Oct  8 12:27:57 1995  Peter Wemm  <peter@haywire.DIALix.COM>
